# InfoHound

./: .env.example  .gitignore  README.md  dogfood_report_v0.1-alpha.md  pyproject.toml
.ai-governance/: BOOT.md  FIRST_WINDOW_PROTOCOL.md  PROJECT_INTAKE.md  PROJECT_STATE.md
.ai-governance/handoff/: CURRENT.md
.ai-governance/roles/: PROJECT_GOVERNOR.md
backend/: __init__.py
backend/app/: cli.py  db.py  main.py  models.py  scheduler.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: __init__.py  discovery.py  exporter.py  fetcher.py  parser.py  pipeline.py  processor.py  source_loader.py  types.py  utils.py
backend/config/: sources.yaml
docs/: qa_checklist.md
infohound.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
template/.ai-governance/: CONTEXT_IMPORT_PROTOCOL.md  CONTEXT_INDEX.md  ROLE_INTEGRATION_PROTOCOL.md
tests/: _support.py  test_api_smoke.py  test_parser_and_pipeline.py  test_postprocessing.py  test_source_sync_and_discovery.py
tools/documents_txt_extractor/: extract_documents_to_txt.py
