[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infohound"
version = "0.1.0"
description = "Fast MVP for agricultural technology intelligence collection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10,<4.0",
  "beautifulsoup4>=4.12,<5.0",
  "fastapi>=0.115,<1.0",
  "ftfy>=6.2,<7.0",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "pymupdf>=1.24,<2.0",
  "python-dateutil>=2.9,<3.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "trafilatura>=1.10,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]
